# 2026-kookmin-contest-qualifier

./: .gitignore  README.md  requirements.txt
Documents/: 00_quick_reference.md  01_mission_overview.md  02_mode_and_stage.md  03_topics_and_messages.md  04_part_responsibilities.md  05_package_structure.md  06_message_definitions.md  07_design_decisions.md
ericar/driving/: package.xml  setup.py
ericar/driving/driving/: driving.py  lane_detection.py  lane_detection.py.bak  lane_detection_test.py  rubbercone.py  straight_test.py
ericar/ericar_msgs/: CMakeLists.txt  package.xml
ericar/ericar_msgs/msg/: ActivePerceptions.msg  ControlState.msg  DrivingOffset.msg  Perception.msg
ericar/function/: package.xml  setup.py
ericar/function/function/: camera_viewer.py  hsv_tuner.py  imu_visualizer.py  lidar_visualizer.py  manual_control.py
ericar/install/: local_setup.sh  setup.sh
ericar/log/: latest_build
ericar/main/: package.xml  setup.py
ericar/main/main/: control.py  main.py
ericar/perception/: package.xml  setup.py
ericar/perception/perception/: collect_data.py  left_car.py  obstacle.py  perception.py  perception_node.py  s_curve.py  school_zone.py  shortcut_exit.py  start_line.py  stop_line.py  traffic_light.py  turn_done.py  yolo_detector.py
ericar/perception/perception/detectors/: __init__.py  traffic_light.py  traffic_light_base.py  traffic_light_start.py  traffic_light_track.py
install/: local_setup.sh  setup.ps1  setup.sh
install/driving/lib/driving/: driving
install/driving/share/driving/: package.bash  package.sh  package.xml
install/function/lib/function/: camera_viewer  hsv_tuner  imu_visualizer  lidar_visualizer  manual_control
install/function/share/function/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/kookmin9_viewer/lib/kookmin9_viewer/: test_viewer
install/kookmin9_viewer/share/kookmin9_viewer/: package.dsv  package.ps1  package.sh
install/main/lib/main/: main
install/main/share/main/: package.sh
install/my_cam/lib/my_cam/: cam_viewer
install/my_cam/share/my_cam/: package.dsv  package.ps1  package.sh
install/my_imu/lib/my_imu/: roll_pitch_yaw
install/my_imu/share/my_imu/: package.dsv  package.ps1  package.sh
install/my_lidar/lib/my_lidar/: lidar_scan  lidar_viewer
install/my_lidar/share/my_lidar/: package.dsv  package.ps1  package.sh
install/my_motor/lib/my_motor/: go  go_stop
install/my_motor/share/my_motor/: package.dsv  package.ps1  package.sh
install/perception/lib/perception/: collect_data  perception
install/perception/share/perception/: package.sh
install/ros_tcp_endpoint/share/ros_tcp_endpoint/: package.ps1  package.sh
install/track_drive/lib/track_drive/: track_drive
log/: latest_build
track_drive/track_drive/: lane_cone_driver.py  track_drive.py
(+89 files in other folders)
