<?xml version="1.0"?>
<package format="3">
  <name>ericar_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for ERICAR team</description>
  <maintainer email="ktypet13@hanyang.ac.kr">ericar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
