<?xml version="1.0"?>
<package format="3">
  <name>main</name>
  <version>0.0.1</version>
  <description>Main state machine and control node for ERICAR</description>
  <maintainer email="ktypet13@hanyang.ac.kr">ericar</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ericar_msgs</exec_depend>
  <exec_depend>xycar_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
